--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 
   <!-- =======================================================
-        Theme Name: Travel Website
-        Github: https://github.com/Web1017/Travel-Website
+        Theme Name: Caroline Travels
+        Github: https://github.com/Web1017/Caroline-Travel-Web-Application
         Author: Javid Niftaliyev
-        Date: April 2018 / Jan 2021 Redesign
+        Date:  Jan 2021 
         Notes: 
         Image Source: Pok Rie from Pexels, Maria Orlova from Pexels,
         Volkan Vardar from Pexels, Mathias P.R. Reding from pexels, 
@@ -102,7 +102,7 @@
           debitis veniam. Eum vero ducimus accusamus, unde esse quod atque, ab, at deserunt doloribus possimus vel similique consequatur.
            Ex, possimus?</p>
     </div>
-    <div class="about-me__image col l6 s12">
+    <div class="about-me__image col l6 s12 m12">
         <img src="img/alev-takil-nFkhSrg69Xw-unsplash.jpg" alt="Beach Photo" >
         <img src="img/alev-takil-x2Or94kjaqo-unsplash.jpg" style="margin: -50px 0;"  alt="City Photo" >
     </div>
@@ -118,7 +118,7 @@
   <section id="destinations"  class="section section-destinations scrollspy ">
     <div class="container ">
       <div class="row">
-        <h1 class="center"> Choose Your Next Destinations </h4>
+        <h2 class="center"> Choose Your Next Destinations </h2>
           <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Laborum dolor iusto fuga aliquam, earum quisquam illum exercitationem 
             voluptatum magni eligendi voluptates incidunt excepturi minus iste?</p>
@@ -179,8 +179,6 @@
 
         <div class="clip col l6 s12 m4">
           <div class="video-wrapper">
-            
-      
             <video class="responsive-video"  controls >
               <source src="./Pexels Videos 1204911.mp4" type="video/mp4" style="pointer-events: none;">
             </video>
