booking section fix

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <a class="hvr-sweep-to-right ">button</a>
         </div>
 
-        <div class="clip col l6 s12 m4">
+        <div class="col l6 s12 m4">
           <div class="video-wrapper">
             <video class="responsive-video"  controls >
               <source src="./pexels-taryn-elliott-6473516.mp4" type="video/mp4" style="pointer-events: none;">
