--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       
     </header>
 
-    <video src="video.mp4" muted loop autoplay></video>
+    <video src="video.mp4" muted loop autoplay playsinline></video>
     <div class="overlay"> </div>
     <div class="text">
       <h2>Start Your Journey</h2>
@@ -175,7 +175,7 @@
 
         <div class="col l6 s12 m4">
           <div class="video-wrapper">
-            <video class="responsive-video"  controls >
+            <video class="responsive-video" controls muted autoplay playsinline >
               <source src="./pexels-taryn-elliott-6473516.mp4" type="video/mp4" style="pointer-events: none;">
             </video>
         </div>
