Card mobile fix #2

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <section id="blog"  class="section section-blog  scrollspy" data-aos="fade-up"> 
     <div class="container ">
       <div class="row">
-        <h3 class="center"> Latest Blog Posts </h3>
+        <h3 class="main-blog-title center"> Latest Blog Posts </h3>
           <p class="blog-notes">Check out some of the latest stories that guides you through each travel. Make your Journey through every inspiration and with every discovery.</p>
             <!-- Blog #1 --->
             <div class="col l3 s12">
